# MLOps_e

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  evaluate.dockerfile  greetings.py  pyproject.toml  requirements.txt  tasks.py  trainer.dockerfile  trainer2.dockerfile  typer_exer.py
.dvc/: config
.github/workflows/: cml_data.yaml  tests.yaml
configs/: sweep.yaml
data/processed/: test.txt
docs/: mkdocs.yaml
models/: best-checkpoint.ckpt  model.pt
src/mlops/: data.py  dataset.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py
wandb/: latest-run
wandb/run-20250109_132312-m9y7ka1x/: run-m9y7ka1x.wandb
wandb/run-20250109_133356-9dlkigi9/: run-9dlkigi9.wandb
wandb/run-20250109_133519-bhfxhpg7/: run-bhfxhpg7.wandb
wandb/run-20250109_134423-hxit2bds/: run-hxit2bds.wandb
wandb/run-20250109_134934-sg2c3fba/: run-sg2c3fba.wandb
wandb/run-20250109_141335-odebt29b/: run-odebt29b.wandb
wandb/run-20250109_141654-ysqffdv1/: run-ysqffdv1.wandb
wandb/run-20250109_142001-b90o7zsd/: run-b90o7zsd.wandb
wandb/run-20250109_142502-lhojin6h/: run-lhojin6h.wandb
wandb/run-20250109_142950-o4698dzw/: run-o4698dzw.wandb
wandb/run-20250109_143206-fv8x3w9b/: run-fv8x3w9b.wandb
wandb/run-20250109_143702-cb01913z/: run-cb01913z.wandb
wandb/run-20250109_144031-gmlnafwz/: run-gmlnafwz.wandb
wandb/run-20250109_144444-zih5fyo8/: run-zih5fyo8.wandb
wandb/run-20250112_120953-1vivu66n/: run-1vivu66n.wandb
wandb/run-20250112_121109-t6lk06d4/: run-t6lk06d4.wandb
wandb/sweep-130bvygb/: config-73mzn2c4.yaml  config-esdck55e.yaml  config-ge1w8d1t.yaml
(+79 files in other folders)
