#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "invoke>=2.2.0",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "numpy>=2.2.1",
    "pipreqs>=0.5.0",
    "ruff>=0.8.6",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "typer>=0.15.1",
]

[tool.ruff]
lint.select = ["I"]
line-length = 120

#[project.scripts]
#train = "mlops.train:train"
#evaluate = "mlops.evaluate:evaluate"
