#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "coverage>=7.6.10",
    "cython>=3.0.11",
    "google-api-python-client>=2.158.0",
    "hydra-core>=1.3.2",
    "invoke>=2.2.0",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "numpy>=2.2.1",
    "omegaconf>=2.3.0",
    "pip>=24.3.1",
    "pipreqs>=0.5.0",
    "pytest>=8.3.4",
    "pytorch-lightning>=2.5.0.post0",
    "ruff>=0.8.6",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "typer>=0.15.1",
    "wandb>=0.19.2",
]

[tool.ruff]
lint.select = ["I"]
line-length = 120

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
]

#[project.scripts]
#train = "mlops.train:train"
#evaluate = "mlops.evaluate:evaluate"
